--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="<%= locale %>">
 <head>
-  <title>SkeletonShop</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <meta charset="UTF-8" />
+  <title><%= yield :meta_title %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<%= render 'layouts/header' %>
+<div id="main">
+  <%= render 'categories/menu' %>
+  <%= render 'shared/flash_messages' %>
+  <%= yield %>
+</div>
+<%= render 'layouts/footer' %>
 </body>
 </html>
