--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,1 +1,14 @@
 <% content_for :meta_title, t('.title') %>
+
+<article>
+  <h1><%= t('.title') %></h1>
+
+  <nav>
+    <ul>
+      <li><%= link_to t('categories.index.header'), categories_path %></li>
+      <li><%= link_to t('brands.index.header'), brands_path %></li>
+      <li><%= link_to t('items.index.header'), items_path %></li>
+      <li><%= link_to t('orders.index.header'), orders_path %></li>
+    </ul>
+  </nav>
+</article>
