--- a/app/views/layouts/_main_navigation.html.erb
+++ b/app/views/layouts/_main_navigation.html.erb
@@ -2,6 +2,9 @@
   <ul>
     <li>About</li>
     <% if current_user.is_a? User %>
+        <% if current_user_has_role? :administrator %>
+            <li><%= link_to t('admin.index.title'), admin_path %></li>
+        <% end %>
         <li><%= link_to t('.logout'), logout_path, method: :delete %></li>
     <% end %>
   </ul>
