Part of main layout and options partial

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,7 @@
 <header>
-  <div class="logo"><%= link_to 'home', root_path %></div>
-  <%= render 'shop/carts/cart' %>
+  <div class="logo-and-cart">
+    <div class="logo"><%= link_to 'home', root_path %></div>
+    <%= render 'shop/carts/cart' %>
+  </div>
   <%= render 'layouts/main_navigation' %>
 </header>
