--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -4,6 +4,43 @@ html {
   font-size: 16px;
 }
 
+body {
+  min-width: 20rem;
+
+  > header {
+    .logo-and-cart {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
+    nav.main {
+      ul {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+
+        li {
+          list-style: none;
+          line-height: 2rem;
+          padding: 0 0.5rem;
+        }
+      }
+    }
+  }
+}
+
+#main {
+  outline: solid lime 1px;
+  display: flex;
+  flex-wrap: wrap;
+
+  .content {
+    width: calc(100% - 15rem);
+  }
+}
+
 div.notice {
   background: #eeffee image_url('icons/notice.png') no-repeat 0.5rem 0.5rem / 2rem 2rem;
   padding: 1rem 1rem 1rem 3rem;
