--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,9 @@
 <% content_for :meta_title, t('.title', page: current_page) %>
+<% content_for :options do %>
+    <ul>
+      <li><%= link_to t(:create), new_category_path %></li>
+    </ul>
+<% end %>
 
 <article class="categories">
   <h1><%= t('.header') %></h1>
