Adding and viewing category

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,4 +1,11 @@
-nav.categories {
+div.categories {
   outline: solid red 1px;
-  width: 15rem;
+  min-width: 12rem;
+  max-width: 15rem;
+}
+
+article.category {
+  th:first-letter {
+    text-transform: uppercase;
+  }
 }
