--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,19 +1,14 @@
 <%= render partial: 'shared/list_of_errors', locals: { entity: entity } %>
 
 <%= form_for entity do |f| %>
-    <% unless entity.image.blank? %>
-        <figure>
-          <%= link_to image_tag(entity.image.preview.url, alt: t(:current_image)), entity.image.url %>
-          <figcaption><%= t(:current_image) %></figcaption>
-        </figure>
-    <% end %>
+    <%= render partial: 'shared/entity_image', locals: { entity: entity } %>
     <div>
       <%= f.label :image %>
       <%= f.file_field :image, accept: 'image/jpeg, image/png' %>
     </div>
     <div>
       <%= f.label :parent_id %>
-      <%= f.number_field :parent_id %>
+      <%= f.select :parent_id, categories_for_select %>
     </div>
     <div>
       <%= f.label :priority %>
