--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,7 @@
 <% content_for :meta_title, t('.title', name: @entity.name ) %>
 <% content_for :options do %>
     <ul>
+      <li><%= link_to t(:create), new_category_path %></li>
       <li><%= link_to t(:list), categories_path %></li>
       <li><%= link_to t(:edit), edit_category_path(@entity) %></li>
       <li><%= link_to_delete @entity %></li>
