--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,4 +1,10 @@
 <% content_for :meta_title, t('.title', page: current_page) %>
+<% content_for :options do %>
+    <ul>
+      <li><%= link_to t(:create), new_brand_path %></li>
+    </ul>
+<% end %>
+
 
 <article class="brands">
   <h1><%= t('.header') %></h1>
