--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -62,6 +62,10 @@ form {
   }
 }
 
+th:first-letter {
+  text-transform: uppercase;
+}
+
 div.notice {
   background: #eeffee image_url('icons/notice.png') no-repeat 0.5rem 0.5rem / 2rem 2rem;
   padding: 1rem 1rem 1rem 3rem;
