Some markup for list of categories in menu

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -28,7 +28,7 @@
     </div>
     <div>
       <div><%= f.label :description %></div>
-      <%= f.text_area :description %>
+      <%= f.text_area :description, cols: 50, rows: 5 %>
     </div>
 
     <div>
