--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,4 +1,34 @@
 div.categories {
-  min-width: 12rem;
-  max-width: 15rem;
+  outline: solid silver 1px;
+  width: 15rem;
+
+  nav {
+    .header {
+      font-size: 1.25rem;
+      line-height: 2rem;
+      text-align: center;
+    }
+
+    > ul {
+      margin: 0;
+
+      ul {
+        margin-left: 1rem;
+      }
+    }
+
+    ul {
+      padding: 0;
+
+      li {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        font-size: 1.125rem;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+  }
 }
