--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -38,6 +38,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
+  font-variant: small-caps;
 }
 
 h1:first-letter {
@@ -53,7 +54,11 @@ a:link, a:visited {
   flex-wrap: wrap;
 
   div.content {
-    min-width: 20rem;
+    width: calc(100% - 15rem);
+
+    > article {
+      padding: 0.5rem;
+    }
   }
 }
 
