--- a/app/views/categories/_tree.html.erb
+++ b/app/views/categories/_tree.html.erb
@@ -2,7 +2,7 @@
     <ul>
       <% categories.each do |category| %>
           <li>
-            <%= link_to category.name, category %>
+            <%= link_to_shop_category category %>
             <%= render partial: 'categories/tree', locals: { categories: Category.level(category.id, true) } %>
           </li>
       <% end %>
