--- a/app/views/shop/categories/show.html.erb
+++ b/app/views/shop/categories/show.html.erb
@@ -2,4 +2,7 @@
 
 <article class="shop-category">
   <h1><%= @category.name %></h1>
+  <%= render partial: 'shop/categories/list', locals: { categories: @category.subcategories } %>
+
+  <%= simple_format @category.description %>
 </article>
