Simple list of items for category

--- a/app/views/shop/categories/show.html.erb
+++ b/app/views/shop/categories/show.html.erb
@@ -5,4 +5,5 @@
   <%= render partial: 'shop/categories/list', locals: { categories: @category.subcategories } %>
 
   <%= simple_format @category.description %>
+  <%= render partial: 'shop/items/list', locals: { items: @category.page_of_items(current_page) } %>
 </article>
