see #1, list of items with links to item page

--- a/app/views/shop/items/_preview.html.erb
+++ b/app/views/shop/items/_preview.html.erb
@@ -1,8 +1,8 @@
 <div class="item-preview">
   <div class="image">
-    <%= image_tag(item.image.preview.url, alt: item.name) %>
+    <%= link_to_shop_item item, image_tag(item.image.preview.url, alt: item.name) %>
   </div>
   <div class="info">
-    <div class="name"><%= item.name %></div>
+    <div class="name"><%= link_to_shop_item item %></div>
   </div>
 </div>
