--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,4 +1,7 @@
+//@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic');
+
 html {
+  font-family: 'PT Sans', sans-serif;
   margin: 0;
   padding: 0;
   font-size: 16px;
@@ -39,6 +42,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
   font-variant: small-caps;
+  font-family: 'PT Serif', serif;
 }
 
 h1:first-letter {
