--- a/app/views/shop/items/_preview.html.erb
+++ b/app/views/shop/items/_preview.html.erb
@@ -7,7 +7,7 @@
     <div class="brand"><%= item.brand_name %></div>
     <div class="price"><%= item.price %></div>
     <div class="cart-control">
-      <%= button_tag t('.add_to_cart'), type: :button, data: { url: shop_cart_item_path(item) } %>
+      <%= button_tag t('.add_to_cart'), type: :button, data: { url: shop_cart_items_path(format: :json), id: item.id } %>
     </div>
   </div>
 </div>
