--- a/app/views/shop/carts/_cart.html.erb
+++ b/app/views/shop/carts/_cart.html.erb
@@ -5,6 +5,6 @@
   <div class="info">
     <% order = Order.from_session session[:order_id] %>
     <div class="item_count"><%= t(:item, count: order.is_a?(Order) ? order.item_count : 0) %></div>
-    <div class="price"><%= order.is_a?(Order) ? order.price : 0 %></div>
+    <div class="price currency"><%= order.is_a?(Order) ? order.price : 0 %></div>
   </div>
 </div>
