--- a/app/views/shop/carts/_items.html.erb
+++ b/app/views/shop/carts/_items.html.erb
@@ -7,7 +7,7 @@
       <span class="name"><%= order_item.item.name %></span>
     </div>
     <div class="price">
-      <div class="value"><%= order_item.price %></div>
+      <div class="value currency"><%= order_item.price %></div>
       <div class="quantity-manager" data-id="<%= order_item.item_id %>">
         <span class="decrement" data-url="<%= shop_cart_item_path(order_item.item, format: :json) %>">&minus;</span>
         <span class="count"><%= order_item.quantity %></span>
