--- a/app/views/shop/items/_preview.html.erb
+++ b/app/views/shop/items/_preview.html.erb
@@ -5,7 +5,7 @@
   <div class="info">
     <div class="name"><%= link_to_shop_item item %></div>
     <div class="brand"><%= item.brand_name %></div>
-    <div class="price"><%= item.price %></div>
+    <div class="price currency"><%= item.price %></div>
     <div class="cart-control">
       <%= button_tag t('.add_to_cart'), type: :button, data: { url: shop_cart_items_path(format: :json), id: item.id } %>
     </div>
